metadata/force-app/main/default/objects/CustomName_MwTfb__c/CustomName_MwTfb__c.object-meta.xml
<CustomObject>
    <description>Description_uvSTz</description>
    <label>CustomLabel_LNlAt</label>
    <nameField>
        <label>CustomLabel_LNlAt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_LNlAts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>