metadata/force-app/main/default/objects/CustomName_MwTfb__c/fields/CustomField_BisJd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_BisJd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldntPSQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>