metadata/force-app/main/default/objects/CustomName_MwTfb__c/fields/CustomField_Keueo__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Keueo__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkhGdf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>